infra/k8s/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: active-svc
  labels:
    app: active
spec:
  ports:
   -  name: http
      protocol: TCP
      port: 80
      targetPort: 80

  selector:
    app: active
  type: LoadBalancer
